# cvtracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cvtracker/: app.py  settings.py  utils.py
templates/: base.html  index.html
tests/: conftest.py  test_api.py
