[project]
name = "cvtracker"
version = "0.1.0"
description = ""
authors = [{ name = "bentoluizv", email = "bentoluizv@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
taskipy = "^1.14.1"
ruff = "^0.11.2"
pytest-cov = "^6.0.0"
ignr = "^2.2"


[tool.ruff]
line-length = 79
exclude = ["app/database/migrations"]

[tool.ruff.lint]
preview = true
ignore = ['PLR6301']
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
dev = 'fastapi dev cvtracker/app.py'
test = 'pytest -s -x --cov=cvtracker'
run = 'fastapi run cvtracker/app.py'
export = 'poetry export -f requirements.txt --output requirements.txt'

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
